starbucks first bug fix

--- a/bmw.html
+++ b/bmw.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMW bike</title>
     <link rel="stylesheet" href="style.css">
+    <script src="bmw.js"></script>
 </head>
 <body>
     <div class="container" id="bike">
@@ -14,12 +15,10 @@
         </nav>
         <div class="content">
             <h2>THE BMW</h2>
-            <h1>
-                G 310
-            </h1>
-            <P>the stregth of the G310 R is im its lightness and agility. the bike not
+            <h1>G 310</h1>
+            <P>The stregth of the G310 R is im its lightness and agility. the bike not
              only delivery fun in the big-city tumult but also when you are redefinig 
-             the city limits when changing corners quickly</P>
+             the city limits when changing corners quickly.</P>
             <h3>choose your colour</h3>
             <div class="colour-select">
                 <div id="red"></div>
